[package]
name = "ObsidianFlow"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3.5.5"
inline-python = "0.6.0"
rocket = "0.4.9"
rocket_contrib = "0.4.9"
serde_json = "1.0.59"
